AP-20934: Retired using org.knime.cxf-util
AP-20934 (Port CXF changes to master (AP-20749, AP-20949))